# axum_surrealdb_template

./: .env  Cargo.toml  LICENSE  README.md
src/: lib.rs  state.rs
src/config/: database.rs  frontend.rs  mod.rs  server.rs  token.rs
src/database/: init.rs  mod.rs  token.rs  user.rs
src/dtos/: auth.rs  mod.rs  user.rs
src/errors/: api.rs  auth.rs  core.rs  db.rs  jwt.rs  mod.rs  response.rs  validation.rs
src/handlers/: admin.rs  auth.rs
src/middlewares/: auth.rs
src/models/: mod.rs  role.rs  token.rs  token_claims.rs  token_scope.rs  token_session.rs  token_status.rs  token_type.rs  user.rs
src/routes/: mod.rs  protected.rs  public.rs
src/services/: token.rs  user.rs
