[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = "0.8.4"
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
once_cell = "1.21.3"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
surrealdb = "2.3.7"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
tower_governor = "0.7.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
